# LearningCUDA

./: CMakeLists.txt  README.md
GEMM/: CMakeLists.txt
GEMM/include/: cuda_gemm.hpp  profile_utils.cuh
GEMM/src/: 00_Naive_MatMul.cu  01_Share_MatMul.cu  cuda_gemm_utils.cu  profile_cuda_gemm_fp32.cu
docs/: 02_learning_resources.md  gemm_performance_analysis.md
docs/00_Setting/: install_environment.md
docs/01_tool/: cuda_gemm_optimization_guide.md  ncu.md  nsys.md  nvidia_profiler_guide.md  nvprof.md  nvprof_ncu_nsys.md
docs/01_tool/ncu.assets/: ncu_raw
docs/data/: ncu_check_exit_code.ncu-rep  ncu_csv.ncu-rep  ncu_devices_0.ncu-rep  ncu_disable_extra_suffixes.ncu-rep  ncu_filter_mode_global.ncu-rep  ncu_forward_signals.ncu-rep  ncu_help  ncu_k_kernel_name.ncu-rep  ncu_k_regex.ncu-rep  ncu_k_s_2_c_8.ncu-rep  ncu_k_vector_add.ncu-rep  ncu_kernel_id.ncu-rep  ncu_launch_3_kill.ncu-rep  ncu_launch_skip_before_match_5.ncu-rep  ncu_metrics_gpu_time.ncu-rep  ncu_null_stdin.ncu-rep  ncu_nvtx_push_pop.ncu-rep  ncu_quiet.ncu-rep  ncu_replay_mode_kernel.ncu-rep  ncu_rules_momory.ncu-rep  ncu_rules_momory_copmpute.ncu-rep  ncu_set_basic.ncu-rep  ncu_set_detailed.ncu-rep  ncu_set_nvlink.ncu-rep  ncu_verbose.ncu-rep  nsys_help  nsys_profile_e_y_0_1.nsys-rep  nsys_profile_gpu_sample_backtrace.nsys-rep  nsys_profile_gpu_sample_backtrace_dwarf.nsys-rep  nsys_profile_memory_cudaum.nsys-rep  nsys_profile_nic.nsys-rep  nsys_profile_nvtx_basic.nsys-rep  nsys_profile_nvtx_basic.sqlite  nsys_profile_nvtx_capture_specific.nsys-rep  nsys_profile_nvtx_domain_exclude.nsys-rep  nsys_profile_nvtx_domain_include.nsys-rep  nsys_profile_nvtx_nested.nsys-rep  nsys_profile_status_true.nsys-rep  nsys_profile_trace_d_sample_cpuctxsw.nsys-rep  stackcollapse_nsys.py
profile_demo/: CMakeLists.txt  README.md
profile_demo/01_basic/src/: basic.cu
profile_demo/02_memory/src/: memory_test.cu
profile_demo/03_multistream/src/: multistream.cu
profile_demo/04_nvtx/src/: nvtx_demo.cu
profile_demo/05_unified_memory/src/: um_demo.cu
profile_demo/06_cuda_graph/src/: cuda_graph.cu
profile_demo/07_callstack/src/: callstack.cu
profile_demo/08_fork_exec/src/: fork_exec.cu
profile_demo/09_mpi/src/: mpi_demo.cu
profile_demo/10_cupti/src/: activity_trace_async.cpp  mat.cu
